--- a/style.css
+++ b/style.css
@@ -26,10 +26,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url("images/oval.svg");
+  background-image: url("images/ovalBG.svg");
   background-repeat: no-repeat;
-  background-position: bottom;
-  background-size: contain;
+  background-position-x: center;
+  background-position-y: 10rem;
+  background-size: cover;
 }
 
 h1 {
