--- a/style.css
+++ b/style.css
@@ -94,6 +94,11 @@ nav {
   cursor: pointer;
 }
 
+.button:hover {
+    background-image: url("images/Ellipse-filled.svg");
+    transition: 0.3s;
+}
+
 a {
   text-decoration: none;
 }
@@ -131,12 +136,16 @@ a {
   justify-content: center;
 }
 
-.userChoice > img {
+.userChoice img {
   margin: 1rem;
 }
 
+.userChoice span:hover img {
+    filter: invert(1);
+}
+
 footer {
-  margin-top: -12rem;
+  margin-top: -6rem;
   display: flex;
   justify-content: space-between;
   width: 80vw;
@@ -144,7 +153,13 @@ footer {
 
 #backBtn {
   opacity: 0%;
-  background-image: url("images/Ellipse.svg");
+  background-image: url("images/Ellipse-black.svg");
+}
+
+#backBtn:hover {
+    background-image: url("images/Ellipse-black-filled.svg");
+    color: white;
+    transition: 0.3s;
 }
 
 #playGame {
@@ -168,4 +183,11 @@ footer {
 #playGame span:hover img {
   filter: grayscale(0);
   cursor: pointer;
+  transition: 0.3s;
+}
+
+.userChoice img:hover {
+    filter: invert(1);
+    transition: 0.3s;
+    cursor: pointer;
 }
