Fixed timer and round button error

--- a/style.css
+++ b/style.css
@@ -129,8 +129,10 @@ a {
 #round-choice,
 #timer-choice {
   background-image: url("images/card-outline.svg");
-  height: 28.125rem;
-  width: 22rem;
+  background-size: 270px;
+  height: 22.125rem;
+  width: 17rem;
+  background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -138,6 +140,7 @@ a {
 
 .userChoice img {
   margin: 1rem;
+  margin-bottom: 2rem;
 }
 
 .userChoice span:hover img {
@@ -150,6 +153,8 @@ footer {
   justify-content: space-between;
   width: 80vw;
 }
+
+
 
 #backBtn {
   opacity: 0%;
