--- a/style.css
+++ b/style.css
@@ -8,6 +8,13 @@
   font-family: "Poppins", sans-serif;
 }
 
+button {
+  border: none;
+  outline: none;
+  background: none;
+  box-shadow: none;
+}
+
 /* html {
   background-image: url("images/oval.svg");
   background-repeat: no-repeat;
@@ -77,7 +84,7 @@ nav {
   align-items: center;
 }
 
-#options > div {
+#options>div {
   text-align: center;
 }
 
@@ -115,14 +122,14 @@ a {
   width: 60vw;
 }
 
-#game > div {
+#game>div {
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
 }
 
-#game > div > h3 {
+#game>div>h3 {
   margin-bottom: 1.25rem;
 }
 
@@ -170,13 +177,13 @@ footer {
   flex-direction: column;
 }
 
-#playGame > div {
+#playGame>div {
   display: flex;
   width: 60vw;
   justify-content: space-between;
 }
 
-#playGame span > img {
+#playGame span>img {
   width: 15rem;
   filter: grayscale(100);
 }
@@ -199,7 +206,7 @@ footer {
   align-items: center;
 }
 
-#playGame > div.score {
+#playGame>div.score {
   justify-content: space-evenly;
   text-align: center;
 }
@@ -225,4 +232,50 @@ footer {
 #counter h2 {
   font-size: 2rem;
   margin-top: 2rem;
+}
+
+/* Style the dropdown button */
+.dropbtn {
+  color: orange;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn:hover {
+  background-color: orange;
+  color: white;
+}
+
+/* Dropdown container */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown content */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-size: 12px;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ffffc2;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
